@@ -10,6 +10,8 @@ Version 1.3.6+svn:
    * unit descriptions are no longer evaluated for the recruitment checksum
      and thus avoiding an OOS error when different languages are used. 
      The change is incompatible with older trunk versions fixes (bug #9472).
+ * WML engine:
+   * now [base_unit]id= inside [unit] can extend upon existing unit types
  * miscellaneous and bug fixes
    * various code cleanups
 
